db cloud integration

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5002
-MONGO_URI=mongodb://127.0.0.1:27017/drycleaning
+MONGO_URI=mongodb+srv://hellenmuraki_db_user:0QQ6avieW6rlShby@cluster0.2bxci05.mongodb.net/drycleanerDB?retryWrites=true&w=majority&authSource=admin&tls=true
 
 EMAIL_USERNAME=benjonesbnftotheworld@gmail.com
 EMAIL_PASSWORD=wzyq akwe rdsx ipxk
