--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
-MONGO_URI=mongodb://127.0.0.1:27017/drycleaning
+#MONGO_URI=mongodb://127.0.0.1:27017/drycleanerDB
+MONGO_URI=mongodb+srv://hellenmuraki_db_user:y2pbElUag9jNT42p@cluster0.omgcxhj.mongodb.net/drycleaning?retryWrites=true&w=majority
 PORT=5002
 JWT_SECRET=your-super-secret-jwt-key-2025
 
